Button Styling and Spacing Fixed, Some Content Added onto Home Page

--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -34,7 +34,7 @@ body {
   content: " ";
   position: absolute;
   display: block;
-  background-color: lightblue;
+  background-color: blue;
   height: 7px;
   margin-top: -4px;
   top: 50%;
@@ -46,7 +46,7 @@ body {
   content: " ";
   position: absolute;
   display: block;
-  background-color: lightblue;
+  background-color: blue;
   width: 7px;
   margin-left: -4px;
   left: 50%;
@@ -56,7 +56,7 @@ body {
 }
 
 h3 {
-  color: yellow;
+  color: white;
   font-size: 18.2px;
   margin: 20px 0 10px 20px;
 }
